--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# for CMake
+
 CMakeCache.txt
 CMakeFiles
 CMakeScripts
@@ -7,3 +9,6 @@ cmake_install.cmake
 install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
+
+# for vscode
+.vscode
